fixed nav-squish issue; used pixels instead of % to space anchor tags

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -62,12 +62,16 @@ body{
                         flex: 4;
                         display: flex;
                         align-items: center;
+                        flex-wrap: nowrap;
+
                         justify-content: flex-end;
                         // background-color: green;
 
                         a{
                             display: flex;
-                            padding: 0% 1%;
+                            letter-spacing: 2px;
+                            flex-wrap: nowrap;
+                            padding: 0px 5px;
                             text-decoration: none;
                             color: white;
                             font-weight: bold;
